EPMRPP-33156: Fix pagination size input values. EPMRPP-34112: Add default sorting to the filters page. Hide grid checkbox cell on mobile screen. Fix pagination buttons on mobile screen. Reset active page on changing page size.

--- a/app/src/components/main/grid/gridBody/gridRow/checkboxCell/checkboxCell.scss
+++ b/app/src/components/main/grid/gridBody/gridRow/checkboxCell/checkboxCell.scss
@@ -1,4 +1,8 @@
 .checkbox-cell {
   width: 1%;
   padding-top: 30px;
+
+  @media (max-width: $SCREEN_SM_MAX) {
+    display: none;
+  }
 }
